{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 50,
  "lineage": "568bcfc7-8fdb-7706-5ccb-de666b9c7792",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f8385696a60e63a8",
            "domain": "vpc",
            "id": "eipalloc-0fd8c4ccef68e83b7",
            "instance": "i-03557350cf0462e18",
            "network_interface": "eni-04439306a5402578c",
            "private_dns": "ip-10-1-1-151.ap-northeast-1.compute.internal",
            "private_ip": "10.1.1.151",
            "public_dns": "ec2-54-168-153-30.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.168.153.30",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.systems_manager",
            "aws_iam_role.role",
            "aws_instance.win-example",
            "aws_key_pair.mykey",
            "aws_security_group.allow-rdp",
            "aws_subnet.public_a",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "win-example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1b16857e17905cb",
            "arn": "arn:aws:ec2:ap-northeast-1:460256653427:instance/i-03557350cf0462e18",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "MyInstanceProfile",
            "id": "i-03557350cf0462e18",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04439306a5402578c",
            "private_dns": "ip-10-1-1-151.ap-northeast-1.compute.internal",
            "private_ip": "10.1.1.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c676e0c4e9d5eb39",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a8a98942bf0477a",
            "tags": {
              "Name": "Windows_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-034082fc743262b2c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.systems_manager",
            "aws_iam_role.role",
            "aws_key_pair.mykey",
            "aws_security_group.allow-rdp",
            "aws_subnet.public_a",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b449c2b61e8c84eb",
            "owner_id": "460256653427",
            "vpc_id": "vpc-02fbe4f1d55323291"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fdea1cf7e2139fc9",
            "owner_id": "460256653427",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b449c2b61e8c84eb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-02fbe4f1d55323291"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0d13c41b03ca9d0",
            "route_table_id": "rtb-0fdea1cf7e2139fc9",
            "subnet_id": "subnet-02a8a98942bf0477a"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075c61db62a3c747a",
            "route_table_id": "rtb-0fdea1cf7e2139fc9",
            "subnet_id": "subnet-09b83d6e985f8e0ff"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public_c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-rdp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:460256653427:security-group/sg-034082fc743262b2c",
            "description": "virtual-office-rdp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034082fc743262b2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6556
              }
            ],
            "name": "allow-all",
            "name_prefix": null,
            "owner_id": "460256653427",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_RDP"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fbe4f1d55323291"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:460256653427:subnet/subnet-02a8a98942bf0477a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-02a8a98942bf0477a",
            "map_public_ip_on_launch": false,
            "owner_id": "460256653427",
            "tags": {
              "Name": "public-a"
            },
            "vpc_id": "vpc-02fbe4f1d55323291"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:460256653427:subnet/subnet-09b83d6e985f8e0ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-09b83d6e985f8e0ff",
            "map_public_ip_on_launch": false,
            "owner_id": "460256653427",
            "tags": {
              "Name": "public-c"
            },
            "vpc_id": "vpc-02fbe4f1d55323291"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:460256653427:vpc/vpc-02fbe4f1d55323291",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0acce52f964d63cfc",
            "default_route_table_id": "rtb-0f153b86dafdf59b2",
            "default_security_group_id": "sg-06a4f3909836012fd",
            "dhcp_options_id": "dopt-029e59b706aa58c0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02fbe4f1d55323291",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f153b86dafdf59b2",
            "owner_id": "460256653427",
            "tags": {
              "Name": "virtual-office-vpc"
            }
          }
        }
      ]
    }
  ]
}